crates/xtask/tests/snapshots/snapshots_test__snapshot_crd.snap
---
source: crates/xtask/tests/snapshots_test.rs
expression: "body(&artifacts, \"snapshots\")"
---
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: snapshots.kopiur.home-operations.com
spec:
  group: kopiur.home-operations.com
  names:
    categories:
    - kopiur
    kind: Snapshot
    plural: snapshots
    shortNames:
    - kopiasnap
    singular: snapshot
  scope: Namespaced
  versions:
  - additionalPrinterColumns:
    - jsonPath: .status.phase
      name: Phase
      type: string
    - jsonPath: .status.origin
      name: Origin
      type: string
    - jsonPath: .status.snapshot.kopiaSnapshotID
      name: Snapshot
      type: string
    - jsonPath: .metadata.creationTimestamp
      name: Age
      type: date
    name: v1alpha1
    schema:
      openAPIV3Schema:
        description: Auto-generated derived type for SnapshotSpec via `CustomResource`
        properties:
          spec:
            description: |-
              A single kopia snapshot represented as a Kubernetes object. ADR §3.4.

              For `scheduled`/`manual` backups the spec carries `policyRef` (+ optional
              overrides). For `discovered` backups the spec is empty — every field is optional.
            properties:
              deletionPolicy:
                description: |-
                  Lifecycle of the underlying kopia snapshot when its `Snapshot` CR is deleted.
                  Shared by `SnapshotPolicy.spec.defaultDeletionPolicy` and `Snapshot.spec.deletionPolicy`.
                  ADR-0003 §4.5 / ADR-0001 §4.5.

                  The reconciler distinguishes the three cases with an exhaustive `match` — Rust
                  enforces that any new variant added later must be handled in every match site,
                  preventing the class of bug where a new policy slips into production without a
                  corresponding reconcile branch.

                  ```
                  use kopiur_api::common::DeletionPolicy;

                  // Produced backups default to deleting the snapshot with the CR.
                  assert_eq!(DeletionPolicy::default(), DeletionPolicy::Delete);
                  // Variants serialize to their bare PascalCase names (plain string enum).
                  assert_eq!(serde_json::to_value(DeletionPolicy::Retain).unwrap(), "Retain");
                  assert_eq!(serde_json::to_value(DeletionPolicy::Orphan).unwrap(), "Orphan");
                  ```
                enum:
                - Delete
                - Retain
                - Orphan
                nullable: true
                type: string
              failurePolicy:
                description: Per-run failure controls passed to the mover `Job`. ADR §3.4 (G6).
                nullable: true
                properties:
                  activeDeadlineSeconds:
                    description: |-
                      Passed through to the mover `Job.spec.activeDeadlineSeconds` — wall-clock cap
                      after which a still-running run is killed.
                    format: int64
                    nullable: true
                    type: integer
                  backoffLimit:
                    description: |-
                      Passed through to the mover `Job.spec.backoffLimit` — how many times a failed
                      run is retried before the Job is marked failed.
                    format: int32
                    nullable: true
                    type: integer
                type: object
              pin:
                description: |-
                  Pin this snapshot to exempt it from GFS retention (ADR-0005 §13(c)). When
                  `true` the reconciler applies a kopia snapshot pin and the GFS pruner never
                  selects it for deletion — for pre-migration / compliance holds. Clearing it
                  removes the pin. Default `false`.
                type: boolean
              policyRef:
                description: The recipe to run. Absent for `discovered` backups. ADR §3.4.
                nullable: true
                properties:
                  name:
                    description: Name of the referenced `SnapshotPolicy`.
                    type: string
                  namespace:
                    description: Namespace of the `SnapshotPolicy`; absent = same namespace as the referrer.
                    nullable: true
                    type: string
                required:
                - name
                type: object
              tags:
                additionalProperties:
                  type: string
                description: 'Arbitrary kopia snapshot tags (e.g. `reason: scheduled-nightly`). ADR §3.4.'
                nullable: true
                type: object
            type: object
          status:
            description: Observed state of a [`Snapshot`]. ADR §3.4 status.
            nullable: true
            properties:
              conditions:
                description: |-
                  Standard Kubernetes conditions (e.g. `SourcesQuiesced`, `SnapshotCreated`).
                  ADR §3.4 status.
                items:
                  description: Condition contains details for one aspect of the current state of this API Resource.
                  properties:
                    lastTransitionTime:
                      description: lastTransitionTime is the last time the condition transitioned from one status to another. This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
                      format: date-time
                      type: string
                    message:
                      description: message is a human readable message indicating details about the transition. This may be an empty string.
                      type: string
                    observedGeneration:
                      description: observedGeneration represents the .metadata.generation that the condition was set based upon. For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date with respect to the current state of the instance.
                      format: int64
                      type: integer
                    reason:
                      description: reason contains a programmatic identifier indicating the reason for the condition's last transition. Producers of specific condition types may define expected values and meanings for this field, and whether the values are considered a guaranteed API. The value should be a CamelCase string. This field may not be empty.
                      type: string
                    status:
                      description: status of the condition, one of True, False, Unknown.
                      type: string
                    type:
                      description: type of condition in CamelCase or in foo.example.com/CamelCase.
                      type: string
                  required:
                  - lastTransitionTime
                  - message
                  - reason
                  - status
                  - type
                  type: object
                type: array
              failure:
                description: |-
                  Structured terminal-failure detail (kopia error class, stderr tail, retry
                  hint), written by the mover before it exits non-zero. ADR §4.10.
                nullable: true
                properties:
                  exitCode:
                    description: The process exit code, if one was reported.
                    format: int32
                    nullable: true
                    type: integer
                  kopiaErrorClass:
                    description: kopia error class (e.g. `RepositoryUnavailable`, `AuthFailure`).
                    type: string
                  message:
                    description: 'A short human-readable message: what failed, why, and how to fix it.'
                    type: string
                  retryRecommended:
                    description: Whether retrying the same operation unchanged could succeed.
                    type: boolean
                  stderrTail:
                    description: |-
                      The last lines of kopia's stderr, if any were captured (bounded by
                      [`MAX_LOG_TAIL_BYTES`]).
                    nullable: true
                    type: string
                required:
                - kopiaErrorClass
                - message
                - retryRecommended
                type: object
              hooks:
                description: |-
                  Hook-execution bookkeeping (ADR §4.8): completion timestamps the
                  reconciler stamps so each hook list runs exactly once per Snapshot across
                  requeues and controller restarts (hooks have side effects — quiesce,
                  resume — that must not repeat).
                nullable: true
                properties:
                  postCompletedAt:
                    description: When the `afterSnapshot` list completed (RFC3339); absent until it has.
                    nullable: true
                    type: string
                  preCompletedAt:
                    description: When the `beforeSnapshot` list completed (RFC3339); absent until it has.
                    nullable: true
                    type: string
                type: object
              job:
                description: Present for scheduled/manual; absent for discovered. ADR §3.4.
                nullable: true
                properties:
                  attempts:
                    description: Number of attempts so far (bounded by `failurePolicy.backoffLimit`). ADR §3.4 status.
                    format: int32
                    nullable: true
                    type: integer
                  name:
                    description: Name of the mover `Job`. ADR §3.4 status.
                    nullable: true
                    type: string
                type: object
              logTail:
                description: |-
                  The last lines of the run's output, written by the mover at the terminal
                  transition (success: the `Snapshot created: <id>` line; failure: the
                  actionable error + kopia stderr tail). Capped at
                  [`crate::common::MAX_LOG_TAIL_BYTES`]; full logs live in the Job pod.
                  ADR §3.4/§4.10.
                nullable: true
                type: string
              observedGeneration:
                description: '`metadata.generation` last reconciled, for staleness detection. ADR §3.4 status.'
                format: int64
                nullable: true
                type: integer
              origin:
                description: |-
                  How a `Snapshot` came to exist. Canonical value mirrored from the `kopiur.home-operations.com/origin`
                  label. Closed enum. ADR §3.4.

                  Origin drives the deletion-policy default (ADR §4.5): `discovered` backups are
                  forced to `Retain` because the operator did not create those snapshots.

                  ```
                  use kopiur_api::Origin;

                  assert_eq!(Origin::default(), Origin::Scheduled);
                  // Serializes camelCase, matching the `origin` label/status value.
                  assert_eq!(serde_json::to_value(Origin::Discovered).unwrap(), "discovered");
                  ```
                enum:
                - scheduled
                - manual
                - discovered
                nullable: true
                type: string
              phase:
                description: |-
                  Lifecycle phase of a `Snapshot`. Closed enum. ADR §3.4 status.

                  ```
                  use kopiur_api::{SnapshotPhase, PhaseLabel};

                  assert_eq!(SnapshotPhase::default(), SnapshotPhase::Pending);
                  // `PhaseLabel::label` gives the stable string used in status/metrics.
                  assert_eq!(SnapshotPhase::Succeeded.label(), "Succeeded");
                  // Every variant is enumerated for metric reset.
                  assert_eq!(SnapshotPhase::ALL.len(), 6);
                  ```
                enum:
                - Pending
                - Running
                - Succeeded
                - Failed
                - Deleting
                - Discovered
                nullable: true
                type: string
              pinned:
                description: |-
                  The observed kopia-side pin state (ADR-0005 §13(c)): `Some(true)` once the
                  operator has applied the pin, `Some(false)` once it has removed it, `None`
                  before any pin reconcile. The reconciler compares `spec.pin` against this to
                  decide whether to issue a `kopia snapshot pin`/`unpin`, so a redundant op is
                  never spawned.
                nullable: true
                type: boolean
              resolved:
                description: Frozen recipe values at run time (scheduled/manual). ADR §3.4.
                nullable: true
                properties:
                  repository:
                    description: The repository this run targeted, frozen at run time. ADR §3.4 status.
                    nullable: true
                    properties:
                      kind:
                        default: Repository
                        description: Which repository CRD this points at; defaults to [`RepositoryKind::Repository`].
                        enum:
                        - Repository
                        - ClusterRepository
                        type: string
                      name:
                        description: Name of the referenced `Repository`/`ClusterRepository`.
                        type: string
                      namespace:
                        description: Cross-namespace `Repository` reference; ignored/forbidden for `ClusterRepository`.
                        nullable: true
                        type: string
                    required:
                    - name
                    type: object
                  sources:
                    description: The concrete PVCs + source paths backed up this run. ADR §3.4 status.
                    items:
                      description: One resolved source backed up by a run — a concrete PVC and its kopia path. ADR §3.4 status.
                      properties:
                        pvc:
                          description: '`namespace/name` of the PVC, as kopia sees it. ADR §3.4.'
                          nullable: true
                          type: string
                        sourcePath:
                          description: The source path kopia recorded for this PVC. ADR §3.4/§4.2.
                          nullable: true
                          type: string
                      type: object
                    type: array
                type: object
              snapshot:
                description: The kopia artifact this CR represents. ADR §3.4.
                nullable: true
                properties:
                  identity:
                    description: The `username@hostname:path` identity recorded for this snapshot. ADR §3.4/§4.2.
                    properties:
                      hostname:
                        description: The final `hostname` kopia records, fixed at admission.
                        type: string
                      sourcePath:
                        description: The resolved snapshot source path, when applicable (`username@hostname:path`).
                        nullable: true
                        type: string
                      username:
                        description: The final `username` kopia records, fixed at admission.
                        type: string
                    required:
                    - hostname
                    - username
                    type: object
                  kopiaSnapshotID:
                    description: |-
                      kopia's snapshot ID — the handle the finalizer uses to delete content.

                      Renamed to match the ADR wire shape exactly (`kopiaSnapshotID`, capital `ID`);
                      serde's `camelCase` would otherwise produce `kopiaSnapshotId`.
                    type: string
                required:
                - identity
                - kopiaSnapshotID
                type: object
              stats:
                description: Byte/file counts parsed from kopia's JSON output. ADR §3.4 status.
                nullable: true
                properties:
                  bytesNew:
                    description: Bytes newly uploaded this run (after dedup/compression). ADR §3.4 status.
                    format: int64
                    nullable: true
                    type: integer
                  filesModified:
                    description: Count of files changed since the previous snapshot. ADR §3.4 status.
                    format: int64
                    nullable: true
                    type: integer
                  filesNew:
                    description: Count of files new since the previous snapshot. ADR §3.4 status.
                    format: int64
                    nullable: true
                    type: integer
                  filesUnchanged:
                    description: Count of files unchanged since the previous snapshot. ADR §3.4 status.
                    format: int64
                    nullable: true
                    type: integer
                  sizeBytes:
                    description: Total logical size of the snapshot in bytes. ADR §3.4 status.
                    format: int64
                    nullable: true
                    type: integer
                type: object
              timing:
                description: Start/end/duration of the snapshot run. ADR §3.4 status.
                nullable: true
                properties:
                  durationSeconds:
                    description: Wall-clock duration in seconds. ADR §3.4 status.
                    format: int64
                    nullable: true
                    type: integer
                  endTime:
                    description: RFC3339 end time of the run. ADR §3.4 status.
                    nullable: true
                    type: string
                  startTime:
                    description: RFC3339 start time of the run. ADR §3.4 status.
                    nullable: true
                    type: string
                type: object
            type: object
        required:
        - spec
        title: Snapshot
        type: object
    served: true
    storage: true
    subresources:
      status: {}
